Fixes text on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -68,4 +68,18 @@
         -webkit-text-stroke-width: 2px;
         -webkit-text-stroke-color: white;
     }
+    
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 900px) {
+    .hero-carousel__cell {
+        width: 80%;
+        padding: 0 5px;
+        p {
+            font-size: 4em;
+            letter-spacing: -2px;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: white;
+
+        }
+    }
 }
